--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "author": "Jiro",
   "description": "A simple helpful robot for your Company",
   "dependencies": {
+    "cron": "^1.1.1",
     "hubot": "^2.19.0",
     "hubot-diagnostics": "0.0.1",
     "hubot-google-images": "^0.2.6",
@@ -17,8 +18,7 @@
     "hubot-rules": "^0.1.1",
     "hubot-scripts": "^2.17.2",
     "hubot-shipit": "^0.2.0",
-    "hubot-slack": "^4.2.1",
-    "hubot-twitter-search": "^1.0.3"
+    "hubot-slack": "^4.2.1"
   },
   "engines": {
     "node": "0.10.x"
